- Fixed scrollbar background color.

--- a/RockWeb/Themes/Rock/Styles/group-scheduler.less
+++ b/RockWeb/Themes/Rock/Styles/group-scheduler.less
@@ -771,3 +771,8 @@
   width: 8px;
   width: 8px;
 }
+
+.styled-scroll-white ::-webkit-scrollbar-track
+.styled-scroll-white::-webkit-scrollbar-track {
+  background-color: #fff !important;
+}
